<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/back">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/previous_combination"
            style="@style/prevButton"
            android:visibility="gone"
            android:layout_width="49dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:layout_height="match_parent"
            android:background="@drawable/back_btn_vector" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="20sp"
            android:text="@string/mainMenuButton"
            android:textColor="@color/green"
            android:layout_toStartOf="@id/next_combination"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_combination"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/nextButton"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_quiz"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">
            <TextView
                android:id="@+id/first_name_combination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/opensansregular"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/firstCombination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">
            <TextView
                android:id="@+id/second_name_combination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/opensansregular"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/secondCombination"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="5"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionQuiz"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="32dp"
                    android:text="@string/aButton"
                    android:textSize="18sp"
                    android:fontFamily="@font/opensansregular"
                    android:paddingVertical="8dp"
                    android:layout_margin="8dp"
                    android:rotation="10"
                    android:layout_weight="2"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="32dp"
                    android:paddingVertical="8dp"
                    android:text="@string/bothButton"
                    android:textSize="18sp"
                    android:fontFamily="@font/opensansregular"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:letterSpacing="0"
                    android:layout_weight="6"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="32dp"
                    android:text="@string/bButton"
                    android:textSize="18sp"
                    android:fontFamily="@font/opensansregular"
                    android:paddingVertical="8dp"
                    android:layout_margin="8dp"
                    android:rotation="-10"
                    android:layout_weight="2"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>