<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_to_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/back_btn" />

            <TextView
                android:id="@+id/art_name_poker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:fontFamily="@font/opensansregular"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/art_rating_poker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/opensansregular"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:theme="@style/MyRatingBar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/opensansregular"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#151d27"
            android:visibility="visible"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ctaReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/write_a_review"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/rating_required"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <RatingBar
                        android:id="@+id/ratingBarLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:numStars="5"
                        android:progressBackgroundTint="#55686868"
                        android:progressTint="#ffdd00"
                        android:stepSize="1" />
                </LinearLayout>
            </LinearLayout>


            <EditText
                android:id="@+id/message_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansregular"
                android:layout_marginTop="16dp"
                android:gravity="center|bottom"
                android:hint="@string/tell_others_what_you_think_about_this_poker_room_TINT"
                android:lines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/opensansregular"
                android:letterSpacing="0"
                android:paddingVertical="8dp"
                android:text="@string/submit_review_btn"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0e1319"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansregular"
                android:text="@string/recent_reviews"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" /> работает? не?
        </LinearLayout>
    </LinearLayout>
</ScrollView>